syntax = "proto3";

package course;

option go_package = "./api";

message Course {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string category = 5;
  int32 cost = 6;
}

message CreateCourseRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string category = 5;
  int32 cost = 6;
}

message CreateCourseResponse {
  Course course = 1;
}

message GetCourseRequest {
  string id = 1;
}

message GetCourseResponse {
  Course course = 1;
}

message UpdateCourseRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string category = 5;
  int32 cost = 6;
}

message UpdateCourseResponse {
  Course course = 1;
}

message DeleteCourseRequest {
  string id = 1;
}

message DeleteCourseResponse {
  string id = 1;
}

message ListCourseRequest {}

message ListCourseResponse {
  Course course = 1;
}

service CourseService {
  rpc CreateCourse (CreateCourseRequest) returns (CreateCourseResponse);
  rpc GetCourse (GetCourseRequest) returns (GetCourseResponse);
  rpc UpdateCourse (UpdateCourseRequest) returns (UpdateCourseResponse);
  rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseResponse);
  rpc ListCourse (ListCourseRequest) returns (stream ListCourseResponse);
}